Fix: image stretched in small screens

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -96,10 +96,11 @@ nav.navbar a.nav-link {
   text-align: justify;
 }
 .column-2 img {
+  margin-top: 80px;
   width: 100%;
   border-radius: 15px;
-  height: 600px;
 }
+
 form {
   border-radius: 15px;
   box-shadow: 0px 0px 15px #b5b5b5;
